# tree-shaking-example

./: .gitignore  .gitmodules  Heuristic分析文档.md  LICENSE  Lacuna分析文档.md  README.md  allFiles.json  allPackages.json  failed.json  fnSummary.json  graph1.py  graph2.py  graph4.py  graph_ablation.py  graph_rec.py  jsshaker.js  main.py  maxRecDepthSize.json  output.js  output2.js  pack.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  shake.mjs  showFileSize.js  sizes.json  sizes_jsshaker.json  table1.ts  table2.ts  table3.ts  table_mangling.ts  table_size.ts  table_summary.ts  table_time.ts  vite.config.js
src/: .gitattributes  .gitignore  Cargo.toml  README.md  antd.js  js-yaml.js  justfile  lodash-es.js  lodash.js  material-ui.js  novnc.js  pnpm-lock.yaml  pnpm-workspace.yaml  rambda.js  rambdax.js  ramda.js  react-icons.js  rust-toolchain.toml  rustfmt.toml  rxjs.js  sentry.js  slidev-demo.js  test-simple.js  test.js  vben-ele.js  vuetify.js
src/.github/workflows/: bench.yml  pages.yml  release.yml  test.yml
src/crates/jsshaker/: Cargo.toml
src/crates/jsshaker/src/: config.rs  entity.rs  lib.rs  main.rs  module.rs  transformer.rs  vfs.rs
src/crates/jsshaker/src/analyzer/: conditional.rs  exhaustive.rs  mod.rs  (+5 more)
src/crates/jsshaker/tests/: mod.rs
src/output/: test.js  test.orig.js
src/tasks/benchmark/: Cargo.toml
src/tasks/benchmark/benches/: basic.rs
src/tasks/benchmark/src/: lib.rs
src/tasks/e2e/: package.json  plugin.ts  vitest.config.ts
src/tasks/e2e/react/: vite.config.ts
src/tasks/e2e/vue/: App.vue  test.ts
src/tasks/test262/: .env.example  .gitignore  README.md  agent.mts  base.mts  failed  features  ignored.json  ignored2.txt  module.mts  package.json  skip  slow  slow-ci  test262-runner.mts  test262-worker.mts  test262.mts  tsconfig.json  tui.mts
(+322 files in other folders)
