[workspace]
resolver = "3"
members = ["crates/*", "packages/napi", "tasks/benchmark"]
default-members = ["crates/*"]

[workspace.package]
authors = ["_Kerman <kermanx@qq.com>"]
categories = ["compilers", "development-tools", "web-programming"]
edition = "2024"
homepage = "https://github.com/kermanx/jsshaker"
keywords = ["JavaScript", "TypeScript", "oxc"]
license = "MIT"
repository = "https://github.com/kermanx/jsshaker"
rust-version = "1.89.0"                                              # Should sync with oxc
description = "Code size optimizer for JavaScript"

[workspace.dependencies]
jsshaker = { path = "crates/jsshaker" }

bitflags = "2.6.0"
clap = "4.5.20"
dashmap = "6.0.1"
flame = "0.2.2"
flamescope = "0.1.3"
flate2 = "1.1.0"
line-index = "0.1.2"
oxc = "0.107.0"
oxc_ast_visit = "0.107.0"
oxc_ecmascript = "0.107.0"
oxc_index = "4.1.0"
oxc_syntax = "0.107.0"
regex = "1.10.6"
rustc-hash = "2.0.0"
insta = "1.39.0"
criterion = { package = "codspeed-criterion-compat", version = "*" }
napi = "3.2.4"
napi-derive = "3.2.4"
napi-build = "2.2.3"
console_error_panic_hook = "0.1.7"
serde = "1.0.219"

# [profile.release]
# # Configurations explicitly listed here for clarity.
# # Using the best options for performance.
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# strip = "symbols" # Set to `false` for debug information
# debug = false     # Set to `true` for debug information
# panic = "abort"   # Let it crash and force ourselves to write safe Rust

[workspace.lints.clippy]
dbg_macro = "deny"
empty_drop = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

missing_transmute_annotations = "allow"
too_many_arguments = "allow"
